--- a/index.html
+++ b/index.html
@@ -8,51 +8,51 @@
 
     <meta
       name="description"
-      content="Zenime is a Free anime streaming website which you can watch English Subbed and Dubbed Anime online. WATCH NOW!. Hianime, 9animetv, aniwatchtv"
+      content="Aenime is a Free anime streaming website which you can watch English Subbed and Dubbed Anime online. WATCH NOW!. Hianime, 9animetv, aniwatchtv"
     />
     <meta
       name="keywords"
-      content="zenime, hianime to, aniwatch, zorox, zoro anime, zoro to, zoroxtv, watch anime online free, free watch anime, anime online to watch"
+      content="aenime, hianime to, aniwatch, zorox, zoro anime, zoro to, zoroxtv, watch anime online free, free watch anime, anime online to watch"
     />
-    <meta name="author" content="Zenime Team" />
+    <meta name="author" content="Aenime Team" />
     <meta name="robots" content="index, follow" />
     <meta name="rating" content="General" />
     <meta name="language" content="English" />
 
     <meta
       property="og:title"
-      content="Zenime | Watch Free Anime,  Online Anime Streaming  - Zenime"
+      content="Aenime | Watch Free Anime,  Online Anime Streaming  - Aenime"
     />
     <meta
       property="og:description"
-      content="Zenime to is a free no ads anime site to watch free anime. Online anime streaming at zenime with DUB, SUB in HD. Hianime, 9animetv, Zoro, s3taku,zenime."
+      content="Aenime to is a free no ads anime site to watch free anime. Online anime streaming at aenime with DUB, SUB in HD. Hianime, 9animetv, Zoro, s3taku,aenime."
     />
     <meta property="og:image" content="https://i.postimg.cc/pVqqMKkR/2IAVHlI.webp" />
-    <meta property="og:url" content="https://zenime.site" />
+    <meta property="og:url" content="https://aenime.webbase.workers.dev" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="Zenime" />
+    <meta property="og:site_name" content="Aenime" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Zenime | Free Anime Streaming Platform"
+      content="Aenime | Free Anime Streaming Platform"
     />
     <meta
       name="twitter:description"
-      content="Stream free English-subbed and dubbed anime online with no ads. Enjoy hassle-free viewing and daily updates on Zenime!"
+      content="Stream free English-subbed and dubbed anime online with no ads. Enjoy hassle-free viewing and daily updates on Aenime!"
     />
     <meta name="twitter:image" content="https://i.postimg.cc/pVqqMKkR/2IAVHlI.webp" />
-    <meta name="twitter:site" content="@ZenimeOfficial" />
-    <title>Zenime | Free Anime Streaming Platform</title>
+    <meta name="twitter:site" content="@aenimeOfficial" />
+    <title>Aenime | Free Anime Streaming Platform</title>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "VideoObject",
-        "name": "Zenime - Watch Anime Free",
-        "description": "Zenime offers free streaming of English-subbed and dubbed anime series and movies. No account needed and no ads!",
+        "name": "Aenime - Watch Anime Free",
+        "description": "Aenime offers free streaming of English-subbed and dubbed anime series and movies. No account needed and no ads!",
         "thumbnailUrl": "https://i.postimg.cc/pVqqMKkR/2IAVHlI.webp",
         "uploadDate": "2024-11-08",
-        "contentUrl": "https://zenime.site",
+        "contentUrl": "https://aenime.webbase.workers.dev",
         "duration": "PT30M",
         "interactionStatistic": {
           "@type": "InteractionCounter",
@@ -61,12 +61,12 @@
         },
         "author": {
           "@type": "Individual",
-          "name": "itzzzme",
-          "url": "https://zenime.site"
+          "name": "cd-Crypton",
+          "url": "https://aenime.webbase.workers.dev"
         },
         "publisher": {
           "@type": "Individual",
-          "name": "itzzzme",
+          "name": "cd-Crypton",
           "logo": {
             "@type": "ImageObject",
             "url": "https://i.postimg.cc/SsKY6Y9f/2H76i57.png"
@@ -74,12 +74,12 @@
         },
         "potentialAction": {
           "@type": "WatchAction",
-          "target": "https://zenime.site"
+          "target": "https://aenime.webbase.workers.dev"
         }
       }
     </script>
 
-    <link rel="canonical" href="https://zenime.site" />
+    <link rel="canonical" href="https://aenime.webbase.workers.dev" />
 
     <link
       rel="stylesheet"
