Switch to a different domain. - This is a free domain, maybe soon--will have a proper domain.
Signed-off-by: Carlo Dee <carlodee.official@proton.me>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="keywords"
       content="aenime, hianime to, aniwatch, zorox, zoro anime, zoro to, zoroxtv, watch anime online free, free watch anime, anime online to watch"
     />
-    <meta name="author" content="Aenime Team" />
+    <meta name="author" content="cd-Crypton carlodandan itzzzme" />
     <meta name="robots" content="index, follow" />
     <meta name="rating" content="General" />
     <meta name="language" content="English" />
@@ -28,7 +28,7 @@
       content="Aenime to is a free no ads anime site to watch free anime. Online anime streaming at aenime with DUB, SUB in HD. Hianime, 9animetv, Zoro, s3taku,aenime."
     />
     <meta property="og:image" content="https://i.postimg.cc/pVqqMKkR/2IAVHlI.webp" />
-    <meta property="og:url" content="https://aenime.webbase.workers.dev" />
+    <meta property="og:url" content="https://aenime.qzz.io" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Aenime" />
@@ -52,7 +52,7 @@
         "description": "Aenime offers free streaming of English-subbed and dubbed anime series and movies. No account needed and no ads!",
         "thumbnailUrl": "https://i.postimg.cc/pVqqMKkR/2IAVHlI.webp",
         "uploadDate": "2024-11-08",
-        "contentUrl": "https://aenime.webbase.workers.dev",
+        "contentUrl": "https://aenime.qzz.io",
         "duration": "PT30M",
         "interactionStatistic": {
           "@type": "InteractionCounter",
@@ -62,7 +62,7 @@
         "author": {
           "@type": "Individual",
           "name": "cd-Crypton",
-          "url": "https://aenime.webbase.workers.dev"
+          "url": "https://aenime.qzz.io"
         },
         "publisher": {
           "@type": "Individual",
@@ -74,12 +74,12 @@
         },
         "potentialAction": {
           "@type": "WatchAction",
-          "target": "https://aenime.webbase.workers.dev"
+          "target": "https://aenime.qzz.io"
         }
       }
     </script>
 
-    <link rel="canonical" href="https://aenime.webbase.workers.dev" />
+    <link rel="canonical" href="https://aenime.qzz.io" />
 
     <link
       rel="stylesheet"
