Update compat_date and images.
Signed-off-by: Carlo Dee <carlodee.official@proton.me>

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       property="og:description"
       content="Aenime to is a free no ads anime site to watch free anime. Online anime streaming at aenime with DUB, SUB in HD. Hianime, 9animetv, Zoro, s3taku,aenime."
     />
-    <meta property="og:image" content="https://i.postimg.cc/pVqqMKkR/2IAVHlI.webp" />
+    <meta property="og:image" content="https://i.postimg.cc/d32RJkQ9/aenime.webp" />
     <meta property="og:url" content="https://aenime.qzz.io" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
@@ -41,7 +41,7 @@
       name="twitter:description"
       content="Stream free English-subbed and dubbed anime online with no ads. Enjoy hassle-free viewing and daily updates on Aenime!"
     />
-    <meta name="twitter:image" content="https://i.postimg.cc/pVqqMKkR/2IAVHlI.webp" />
+    <meta name="twitter:image" content="https://i.postimg.cc/d32RJkQ9/aenime.webp" />
     <meta name="twitter:site" content="@aenimeOfficial" />
     <title>Aenime | Free Anime Streaming Platform</title>
     <script type="application/ld+json">
@@ -50,8 +50,8 @@
         "@type": "VideoObject",
         "name": "Aenime - Watch Anime Free",
         "description": "Aenime offers free streaming of English-subbed and dubbed anime series and movies. No account needed and no ads!",
-        "thumbnailUrl": "https://i.postimg.cc/pVqqMKkR/2IAVHlI.webp",
-        "uploadDate": "2024-11-08",
+        "thumbnailUrl": "https://i.postimg.cc/d32RJkQ9/aenime.webp",
+        "uploadDate": "2025-10-07",
         "contentUrl": "https://aenime.qzz.io",
         "duration": "PT30M",
         "interactionStatistic": {
@@ -69,7 +69,7 @@
           "name": "cd-Crypton",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://i.postimg.cc/SsKY6Y9f/2H76i57.png"
+            "url": "https://i.postimg.cc/gjV712CP/aenime.png"
           }
         },
         "potentialAction": {
